RESOLVED FIXED41026
GraphicsContext3D doesn't define platformLayer() method any platform other than PLATFORM(MAC)
https://bugs.webkit.org/show_bug.cgi?id=41026
Summary GraphicsContext3D doesn't define platformLayer() method any platform other th...
Vangelis Kokkevis
Reported 2010-06-22 17:38:53 PDT
This breaks any non PLATFORM(MAC) build (including Chromium and Qt) that define ACCELERATED_COMPOSITING and 3D_CANVAS
Attachments
Proposed patch (1.93 KB, patch)
2010-06-22 18:05 PDT, Vangelis Kokkevis
no flags
Vangelis Kokkevis
Comment 1 2010-06-22 18:05:34 PDT
Created attachment 59450 [details] Proposed patch
Kent Tamura
Comment 2 2010-06-22 18:56:03 PDT
Comment on attachment 59450 [details] Proposed patch Clearing flags on attachment: 59450 Committed r61648: <http://trac.webkit.org/changeset/61648>
Kent Tamura
Comment 3 2010-06-22 18:56:10 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4 2010-06-22 19:06:26 PDT
http://trac.webkit.org/changeset/61648 might have broken Chromium Linux Release
Vangelis Kokkevis
Comment 5 2010-06-23 10:39:33 PDT
The build break was taken care of by: http://trac.webkit.org/changeset/61649 Thanks, Kent!
Note You need to log in before you can comment on or make changes to this bug.