2010-06-22  Vangelis Kokkevis  <vangelis@chromium.org>

Reviewed by Kent Tamura.

        Define GraphicsContext3D::platformLayer() for all remaining (non PLATFORM(MAC))
        ports to get RenderLayerBacking.cpp compiling again.
        https://bugs.webkit.org/show_bug.cgi?id=41026

        * platform/graphics/GraphicsContext3D.h:
        (WebCore::GraphicsContext3D::platformLayer):

git-svn-id: svn://svn.chromium.org/blink/trunk@61648 bbb929c8-8fbe-4397-9dbb-9b2b20218538